<?xml version="1.0"?>
<package>
  <name>ros_utils</name>
  <version>0.2.0</version>
  <description>The ros_utils package</description>

  <maintainer email="antoniocoratelli@gmail.com">Antonio Coratelli</maintainer>
  <author email="antoniocoratelli@gmail.com">Antonio Coratelli</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>
